# live-dashboard-plus

./: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml  start.sh
.github/workflows/: build-agents.yml
agents/android/: config.sh.example  module.prop  service.sh
agents/android-app/: README.md
agents/macos/: agent.py  config.json
agents/windows/: agent.py  build.bat  config.example.json  install-task.bat  requirements.txt
agents/windows-rs/: .gitignore  Cargo.toml
agents/windows-rs/src/: audio.rs  autostart.rs  config.rs  main.rs  monitor.rs  music.rs  reporter.rs  settings.rs  tray.rs  win32.rs
deploy/nginx/: example.conf
