[package]
name = "live-dashboard-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "live-dashboard-agent"
path = "src/main.rs"

[dependencies]
# Win32 API
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security",
] }

# System tray
tray-icon = "0.19"

# Image processing (tray icon generation)
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1"

# URL parsing (config validation)
url = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Thread safety
parking_lot = "0.12"

# Settings GUI
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.winresource]
FileDescription = "Live Dashboard Windows Agent"
ProductName = "Live Dashboard Agent"
LegalCopyright = "Copyright 2026 Monika"
